@@ -1,3 +1,4 @@
+Fixed: For charts with a single series, should have the text label above the text box and units to improve layout
 Fixed: Velocity and position series controls shouldn't have checkboxes.
 Added the wall force to the forces and motion series charts
 Added spring graphics for bouncy walls
